syntax = "proto3";

message C2S_SignUpRequest {
    string id = 1;
    string password = 2;
}

message C2S_SignInRequest {
    string id = 1;
    string password = 2;
}

message C2S_MatchRequest {
    uint64 timestamp = 1;
}

message C2S_TowerPurchaseRequest {
    float x = 1;
    float y = 2;
    uint32 userGold = 3;
    string userId = 4;
    uint32 towerCost = 5;
    uint32 index = 6;
}

message C2S_TowerAttackRequest {
    uint64 timestamp = 1;
    string userId = 2;
    uint32 towerIndex = 3;
    uint32 monsterIndex = 4;
}

message C2S_MonsterSpawnRequest {
    repeated Coords paths = 1;
    uint32 monsterLevel = 2;
    uint32 monsterNumber = 3;
    message Coords {
        float x = 1;
        float y = 2;
    }
}

message C2S_MonsterKillRequest {

}

message C2S_BaseAttackedRequest {

}

message C2S_GameEndRequest {
    
}

message C2S_ChattingRequest {
    string chattingMessage = 1;
}

message RequestPacket {
    string token = 1;
    string clientVersion = 2;
    oneof payload {
        C2S_SignUpRequest signUpRequest = 3;
        C2S_SignInRequest signInRequest = 4;
        C2S_MatchRequest matchRequest = 5;
        C2S_TowerPurchaseRequest towerPurchaseRequest = 6;
        C2S_TowerAttackRequest towerAttackRequest = 7;
        C2S_MonsterSpawnRequest monsterSpawnRequest = 8;
        C2S_MonsterKillRequest monsterKillRequest = 9;
        C2S_BaseAttackedRequest baseAttackedRequest = 10;
        C2S_GameEndRequest gameEndRequest = 11;
        C2S_ChattingRequest chattingRequest = 12;
    }
}